Fixed queries to work with case-sensitive RDBMS; fixed line break/wrapping issue in welcome screen DDL

--- a/StorefrontDemo/src/main/webapp/css/Storefront.less
+++ b/StorefrontDemo/src/main/webapp/css/Storefront.less
@@ -420,8 +420,6 @@ th.text-center, td.text-center {
 			font-family: monospace;
 			width: 100%;
 			height: 300px;
-			white-space: nowrap;
-			overflow: auto;
 		}
 	}
 }
